--- a/contents/config.yml
+++ b/contents/config.yml
@@ -1,5 +1,5 @@
-title: Sen Li's Homepage
-page-top-title: Sen Li
-top-section-bg-text: Computer Science
-home-subtitle: Sen Li&ensp;|&ensp;李森
-copyright-text: '&copy; Sen Li 2023-2024. All Rights Reserved.'
+title: Siyan Lin's Homepage
+page-top-title: Siyan Lin
+top-section-bg-text: Psychology
+home-subtitle: Siyan Lin&ensp;|&ensp 林思延
+copyright-text: '&copy; Siyan Lin 2023-2024. All Rights Reserved.'
