--- a/contents/config.yml
+++ b/contents/config.yml
@@ -1,5 +1,5 @@
 title: Siyan Lin's Homepage
 page-top-title: Siyan Lin
 top-section-bg-text: Psychology
-home-subtitle: Siyan Lin | 林思延
+home-subtitle: Siyan Lin（林思延）
 copyright-text: '&copy; Siyan Lin 2023-2024. All Rights Reserved.'
